Fixed training navbar overlap with breadcrumbs

--- a/app/assets/stylesheets/training_modules/_nav.styl
+++ b/app/assets/stylesheets/training_modules/_nav.styl
@@ -18,9 +18,10 @@ body.training nav.top-nav
 
 .training__slide-header
   padding 12px 0 16px 0
-  height 55px
+  height auto
   background $training_primary
-  ol.breadcrumbs
+  ol.breadcrumbs 
+    width 85%
     @extends .breadcrumbs
     color $breadcrumb_light_text
     text-align left
